[misc] various minor cleanups
some suggested by intellij idea